# avr-libc

./: CMakeLists.txt
cmake/: Generic-avr-gcc-avr2.cmake  avr-gcc-toolchain.cmake  avr-toolchain.cmake
include/: stdfix-avrlibc.h
libc/: CMakeLists.txt
libc/pmstring/: strsep_P.S
libc/stdlib/: Files.am  sqrtfx.S  strtofxhr.c
libc/string/: strsep.S
libm/: CMakeLists.txt
libm/fxlib/: Files.am  sqrtuhk.S
tests/simulate/pmstring/: strsep_P.c  strtok_P.c
tests/simulate/stdfix/: sqrtfx-4.c
tests/simulate/stdlib/: sqrtfx-1.c  sqrtfx-2.c  sqrtfx-3.c  strtofx-1.c  tolower-1.c
tests/simulate/string/: strsep.c  strtok.c
