set(LIBC_ASM_SOURCES
    ${CMAKE_CURRENT_LIST_DIR}/stdio/ultoa_invert.S
    ${CMAKE_CURRENT_LIST_DIR}/stdio/putc.S
    ${CMAKE_CURRENT_LIST_DIR}/stdio/getc.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strcpy.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strcasestr.S
    ${CMAKE_CURRENT_LIST_DIR}/string/memcpy.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strncpy.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strlen.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strcat.S
    ${CMAKE_CURRENT_LIST_DIR}/string/ffsll.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strchr.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strrchr.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strlcat.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strtok_r.S
    ${CMAKE_CURRENT_LIST_DIR}/string/memcmp.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strcasestr_P.S
    ${CMAKE_CURRENT_LIST_DIR}/string/ffs.S
    ${CMAKE_CURRENT_LIST_DIR}/string/memmove.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strcmp.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strlcpy.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strrev.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strcspn.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strnlen.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strstr.S
    ${CMAKE_CURRENT_LIST_DIR}/string/memmem.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strpbrk.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strupr.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strncmp.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strchrnul.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strlwr.S
    ${CMAKE_CURRENT_LIST_DIR}/string/memchr.S
    ${CMAKE_CURRENT_LIST_DIR}/string/memccpy.S
    ${CMAKE_CURRENT_LIST_DIR}/string/ffsl.S
    ${CMAKE_CURRENT_LIST_DIR}/string/memrchr.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strsep.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strcasecmp.S
    ${CMAKE_CURRENT_LIST_DIR}/string/memset.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strncasecmp.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strspn.S
    ${CMAKE_CURRENT_LIST_DIR}/string/memmem_P.S
    ${CMAKE_CURRENT_LIST_DIR}/string/strncat.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/exit.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/atol.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/isalpha.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/div.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/abort.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/atof.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/ftoa_engine.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/isdigit.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/isxdigit.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/toascii.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/iscntrl.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/ldiv.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/ctype.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/toupper.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/ispunct.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/setjmp.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/isspace.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/isprint.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/tolower.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/atoi.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/isblank.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/isalnum.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/cty_isfalse.S
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/isascii.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strlcat_PF.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strncat_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strcmp_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/memchr_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strlen_PF.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strncasecmp_PF.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strcasecmp_PF.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strlcpy_PF.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strstr_PF.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strpbrk_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/memcpy_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strchrnul_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strcpy_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strcasecmp_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/memccpy_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strtok_rP.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strncmp_PF.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strncpy_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strchr_PF.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strncasecmp_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strncpy_PF.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strchr_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strlcat_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/memrchr_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strstr_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strcmp_PF.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strnlen_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/memcpy_PF.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strlen_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strspn_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strcat_PF.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strsep_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strlcpy_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/memcmp_PF.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/memcmp_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strnlen_PF.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strcspn_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strcpy_PF.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strncmp_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strncat_PF.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strrchr_P.S
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strcat_P.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/ultoa.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/itoa_ncheck.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/mulsi10.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/eerd_qword.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/eerd_word.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/eeupd_word.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/ccp_write_spm.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/eewr_dword.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/itoa.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/eewr_byte.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/ultoa_ncheck.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/eeupd_block.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/utoa_ncheck.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/flmap_init.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/ltoa.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/ccp_write.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/ltoa_ncheck.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/eeupd_byte.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/eerd_block.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/eewr_qword.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/eerd_dword.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/utoa.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/eerd_byte.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/eeupd_dword.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/mul10.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/eeupd_qword.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/eewr_word.S
    ${CMAKE_CURRENT_LIST_DIR}/misc/eewr_block.S
    ${CMAKE_CURRENT_LIST_DIR}/time/system_tick.S
)

set(LIBC_C_SOURCES
    ${CMAKE_CURRENT_LIST_DIR}/stdio/vsnprintf_p.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/fdevopen.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/getchar.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/snprintf_p.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/fclose.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/sprintf_p.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/scanf_p.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/sscanf.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/pwr_10.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/puts_p.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/ferror.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/vscanf.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/sscanf_p.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/fprintf.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/vsprintf.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/fputc.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/feof.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/puts.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/fgets.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/fputs.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/vfprintf.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/clearerr.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/fwrite.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/fscanf_p.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/vfscanf.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/vfprintf_p.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/vfscanf_p.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/putchar.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/fscanf.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/printf_p.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/fgetc.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/fprintf_p.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/printf.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/ungetc.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/scanf.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/fread.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/vprintf.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/vsnprintf.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/iob.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/fputs_p.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/sprintf.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/snprintf.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/gets.c
    ${CMAKE_CURRENT_LIST_DIR}/stdio/vsprintf_p.c
    ${CMAKE_CURRENT_LIST_DIR}/string/strdup.c
    ${CMAKE_CURRENT_LIST_DIR}/string/strlcpy.c
    ${CMAKE_CURRENT_LIST_DIR}/string/strtok.c
    ${CMAKE_CURRENT_LIST_DIR}/string/strndup.c
    ${CMAKE_CURRENT_LIST_DIR}/string/strlcat.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/malloc.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/rand.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/errno.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/dtoa_prf.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/assert.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/atoi.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/calloc.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/strtoul.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/qsort.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/bsearch.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/getenv.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/random.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/strtod.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/strtol.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/dtostre.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/realloc.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/abs.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/atexit.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/labs.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/abort.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/atol.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/dtostrf.c
    ${CMAKE_CURRENT_LIST_DIR}/stdlib/system.c
    ${CMAKE_CURRENT_LIST_DIR}/pmstring/strtok_P.c
    ${CMAKE_CURRENT_LIST_DIR}/misc/eewr_block_xmega.c
    ${CMAKE_CURRENT_LIST_DIR}/time/fatfs_time.c
    ${CMAKE_CURRENT_LIST_DIR}/time/gmtime_r.c
    ${CMAKE_CURRENT_LIST_DIR}/time/system_time.c
    ${CMAKE_CURRENT_LIST_DIR}/time/equation_of_time.c
    ${CMAKE_CURRENT_LIST_DIR}/time/difftime.c
    ${CMAKE_CURRENT_LIST_DIR}/time/usa_dst.c
    ${CMAKE_CURRENT_LIST_DIR}/time/iso_week_date_r.c
    ${CMAKE_CURRENT_LIST_DIR}/time/asctime.c
    ${CMAKE_CURRENT_LIST_DIR}/time/time.c
    ${CMAKE_CURRENT_LIST_DIR}/time/print_lz.c
    ${CMAKE_CURRENT_LIST_DIR}/time/moon_phase.c
    ${CMAKE_CURRENT_LIST_DIR}/time/week_of_month.c
    ${CMAKE_CURRENT_LIST_DIR}/time/tm_store.c
    ${CMAKE_CURRENT_LIST_DIR}/time/sun_set.c
    ${CMAKE_CURRENT_LIST_DIR}/time/isLeap.c
    ${CMAKE_CURRENT_LIST_DIR}/time/strftime.c
    ${CMAKE_CURRENT_LIST_DIR}/time/ctime.c
    ${CMAKE_CURRENT_LIST_DIR}/time/gmtime.c
    ${CMAKE_CURRENT_LIST_DIR}/time/isotime_r.c
    ${CMAKE_CURRENT_LIST_DIR}/time/asctime_r.c
    ${CMAKE_CURRENT_LIST_DIR}/time/set_position.c
    ${CMAKE_CURRENT_LIST_DIR}/time/localtime.c
    ${CMAKE_CURRENT_LIST_DIR}/time/asc_store.c
    ${CMAKE_CURRENT_LIST_DIR}/time/dst_pointer.c
    ${CMAKE_CURRENT_LIST_DIR}/time/localtime_r.c
    ${CMAKE_CURRENT_LIST_DIR}/time/eu_dst.c
    ${CMAKE_CURRENT_LIST_DIR}/time/month_length.c
    ${CMAKE_CURRENT_LIST_DIR}/time/iso_week_date.c
    ${CMAKE_CURRENT_LIST_DIR}/time/utc_offset.c
    ${CMAKE_CURRENT_LIST_DIR}/time/mktime.c
    ${CMAKE_CURRENT_LIST_DIR}/time/isotime.c
    ${CMAKE_CURRENT_LIST_DIR}/time/mk_gmtime.c
    ${CMAKE_CURRENT_LIST_DIR}/time/week_of_year.c
    ${CMAKE_CURRENT_LIST_DIR}/time/sun_rise.c
    ${CMAKE_CURRENT_LIST_DIR}/time/set_dst.c
    ${CMAKE_CURRENT_LIST_DIR}/time/geo_location.c
    ${CMAKE_CURRENT_LIST_DIR}/time/solar_noon.c
    ${CMAKE_CURRENT_LIST_DIR}/time/solar_declination.c
    ${CMAKE_CURRENT_LIST_DIR}/time/ctime_r.c
    ${CMAKE_CURRENT_LIST_DIR}/time/set_system_time.c
    ${CMAKE_CURRENT_LIST_DIR}/time/lm_sidereal.c
    ${CMAKE_CURRENT_LIST_DIR}/time/daylight_seconds.c
    ${CMAKE_CURRENT_LIST_DIR}/time/set_zone.c
    ${CMAKE_CURRENT_LIST_DIR}/time/gm_sidereal.c
)

add_library(c STATIC
    ${LIBC_ASM_SOURCES}
    ${LIBC_C_SOURCES}
)

target_include_directories(c PRIVATE
    ${CMAKE_SOURCE_DIR}/common
    ${CMAKE_SOURCE_DIR}/include
)

